<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewNewEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/clockInLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingTop="15dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/view_clock_in"/>
        />

        <TextView
            android:id="@+id/clockInTime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/clockOutLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/clockInLabel"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/view_clock_out"/>

            <TextView
                android:id="@+id/clockOutTime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"/>
        </LinearLayout>

        <TextView
            android:id="@+id/timeElapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/default_time_view"
            android:textSize="30dp"
            android:layout_below="@id/clockOutLabel"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btnClockInOut"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/btn_clock_in"
            android:background="@drawable/button_clock_in"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:elevation="2dp"
            android:layout_below="@+id/timeElapsed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:elevation="2dp"
            android:layout_above="@+id/listTimeEntries"
            android:background="@color/primary_light" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_column_heading"
                android:textStyle="bold" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/second_column_heading"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/third_column_heading"
                android:textStyle="bold"/>
        </LinearLayout>

        <ListView
            android:id="@+id/listTimeEntries"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_below="@+id/btnClockInOut"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true">
        </ListView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:elevation="2dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"

        android:background="@color/primary_dark" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Total Hours"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/totalTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</FrameLayout>