<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/first_column_heading"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/viewStartDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                style="?android:attr/spinnerStyle"
                android:gravity="center"/>
            <TextView
                android:id="@+id/viewStartTime"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                style="?android:attr/spinnerStyle"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:text="@string/second_column_heading"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/viewStopDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                style="?android:attr/spinnerStyle"
                android:gravity="center"/>
            <TextView
                android:id="@+id/viewStopTime"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                style="?android:attr/spinnerStyle"
                android:gravity="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonAddNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:text="@string/done"
            android:background="@color/primary"
            android:textColor="@color/white"/>

    </LinearLayout>
    <View
    android:id="@+id/viewPicker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</FrameLayout>